--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@
             </div>
         </div>
 
-        <div id="slider">
-            <div class="text-content">
-                <h2 class="text-heading">Chicago</h2>
-                <div class="text-desc">Thank you, Chicago - A right we won't forget</div>
-            </div>
+        <div class="sliders">
+            
         </div>
 
         <div id="content">
@@ -118,7 +115,7 @@
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="s-full-width btn js-buy-ticket">Buy Tickets</button>
+                                <button class="contact-submit-btn s-full-width btn js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="mt-16 s-col-full col col-third">
@@ -127,7 +124,7 @@
                                 <h3 class="place-heading">Paris</h3>
                                 <p class="place-time">Sat 28 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="s-full-width btn js-buy-ticket">Buy Tickets</button>
+                                <button class="contact-submit-btn s-full-width btn js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="mt-16 s-col-full col col-third">
@@ -136,7 +133,7 @@
                                 <h3 class="place-heading">San Francisco</h3>
                                 <p class="place-time">Sun 29 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="s-full-width btn js-buy-ticket">Buy Tickets</button>
+                                <button class="contact-submit-btn s-full-width btn js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
                     </div>
@@ -181,7 +178,7 @@
                                 </div>
                                 <!-- <div class="clear"></div> -->
                             </div>
-                            <button class="s-full-width btn pull-right" type="submit" value="">Send</button>
+                            <button class="contact-submit-btn s-full-width btn pull-right" type="submit" value="">Send</button>
                         </form>
                     </div>
                 </div>
